@@ -291,6 +291,13 @@ a.footer_link:hover {color: #fff; background-color: #cc3334 !important;}
       padding: 1px;
       font-size: 10px;
       }
+         
+.orange {
+      color: #fff;
+      background: #FFA500;
+      padding: 1px;
+      font-size: 10px;
+      }
 
 .green {
       color: #fff;
